Replace the array of permutations with a stream. The array version ran out of memory for bigger components